--- a/project2/day1proj2/src/app/pages/certificates/certificates.html
+++ b/project2/day1proj2/src/app/pages/certificates/certificates.html
@@ -6,7 +6,7 @@
 
   <div class="certificates-grid">
     <div class="certificate-card tech-cert">
-      <img src="/images/mongo.png" alt="MongoDB Certification" class="cert-image">
+      <img src="images/mongo.png" alt="MongoDB Certification" class="cert-image">
       <h3>MongoDB Certification</h3>
       <div class="cert-issuer">MongoDB University</div>
       <div class="cert-description">
@@ -21,7 +21,7 @@
     </div>
 
     <div class="certificate-card security-cert">
-      <img src="/images/cyber.jpg" alt="Cyber Security Certification" class="cert-image">
+      <img src="images/cyber.jpg" alt="Cyber Security Certification" class="cert-image">
       <h3>Cyber Security Certification</h3>
       <div class="cert-issuer">SkillVertex • 2023</div>
       <div class="cert-description">
@@ -36,7 +36,7 @@
     </div>
 
     <div class="certificate-card sports-cert">
-      <img src="/images/cm.avif" alt="Bronze Medal" class="cert-image">
+      <img src="images/cm.avif" alt="Bronze Medal" class="cert-image">
       <h3>Bronze Medal</h3>
       <div class="cert-issuer">District-level Football Competition</div>
       <div class="cert-description">
@@ -50,7 +50,7 @@
     </div>
 
     <div class="certificate-card sports-cert gold">
-      <img src="/images/foot.png" alt="First Place Trophy" class="cert-image">
+      <img src="images/foot.png" alt="First Place Trophy" class="cert-image">
       <h3>First Place</h3>
       <div class="cert-issuer">"Covai Ties" College Zone Level</div>
       <div class="cert-description">
@@ -64,3 +64,4 @@
     </div>
   </div>
 </div>
+
