--- a/project2/day1proj2/src/app/pages/project/project.html
+++ b/project2/day1proj2/src/app/pages/project/project.html
@@ -24,7 +24,7 @@
 
   <div class="projects-grid">
     <div class="project-card">
-      <img src="/images/brinjal.jpg" alt="Plant disease detection" class="project-image" loading="lazy">
+      <img src="images/brinjal.jpg" alt="Plant disease detection" class="project-image" loading="lazy">
       <div class="project-meta">
         <span class="duration">3 months</span>
         <span class="team-size">Solo Project</span>
@@ -43,7 +43,7 @@
     </div>
 
     <div class="project-card">
-      <img src="/images/mask.png" alt="Face mask detection" class="project-image" loading="lazy">
+      <img src="images/mask.png" alt="Face mask detection" class="project-image" loading="lazy">
       <div class="project-meta">
         <span class="duration">2 months</span>
         <span class="team-size">Solo Project</span>
@@ -62,7 +62,7 @@
     </div>
 
     <div class="project-card">
-      <img src="/images/bus.png" alt="Smart bus station" class="project-image" loading="lazy">
+      <img src="images/bus.png" alt="Smart bus station" class="project-image" loading="lazy">
       <div class="project-meta">
         <span class="duration">4 months</span>
         <span class="team-size">Team of 3</span>
@@ -81,7 +81,7 @@
     </div>
 
     <div class="project-card">
-      <img src="/images/co.jpg" alt="Carbon emission reduction" class="project-image" loading="lazy">
+      <img src="images/co.jpg" alt="Carbon emission reduction" class="project-image" loading="lazy">
       <div class="project-meta">
         <span class="duration">6 months</span>
         <span class="team-size">Team of 4</span>
@@ -100,7 +100,7 @@
     </div>
 
     <div class="project-card">
-      <img src="/images/cardiac.jpg" alt="Healthcare application" class="project-image" loading="lazy">
+      <img src="images/cardiac.jpg" alt="Healthcare application" class="project-image" loading="lazy">
       <div class="project-meta">
         <span class="duration">3 months</span>
         <span class="team-size">Team of 2</span>
@@ -119,7 +119,7 @@
     </div>
 
     <div class="project-card">
-      <img src="/images/ticket.avif" alt="Support ticket system" class="project-image" loading="lazy">
+      <img src="images/ticket.avif" alt="Support ticket system" class="project-image" loading="lazy">
       <div class="project-meta">
         <span class="duration">2 months</span>
         <span class="team-size">Solo Project</span>
