--- a/project2/day1proj2/src/app/pages/skills/skills.html
+++ b/project2/day1proj2/src/app/pages/skills/skills.html
@@ -30,7 +30,7 @@
           <div class="skill-level"></div>
         </div>
         <div class="skill-item intermediate">
-          <img src="/images/sql.webp" alt="SQL" class="skill-icon">
+          <img src="images/sql.webp" alt="SQL" class="skill-icon">
           <div class="skill-name">SQL</div>
           <div class="skill-details">PostgreSQL, MySQL</div>
           <div class="skill-level"></div>
@@ -58,13 +58,13 @@
           <div class="skill-level"></div>
         </div>
         <div class="skill-item intermediate">
-          <img src="/images/opencv.png" alt="OpenCV" class="skill-icon">
+          <img src="images/opencv.png" alt="OpenCV" class="skill-icon">
           <div class="skill-name">OpenCV</div>
           <div class="skill-details">Computer Vision</div>
           <div class="skill-level"></div>
         </div>
         <div class="skill-item beginner">
-          <img src="/images/jiratool.png" alt="JIRA" class="skill-icon">
+          <img src="images/jiratool.png" alt="JIRA" class="skill-icon">
           <div class="skill-name">JIRA</div>
           <div class="skill-details">Scrum & Kanban</div>
           <div class="skill-level"></div>
@@ -79,19 +79,19 @@
       </div>
       <div class="skills-grid">
         <div class="skill-item beginner">
-          <img src="/images/block.png" alt="Blockchain" class="skill-icon">
+          <img src="images/block.png" alt="Blockchain" class="skill-icon">
           <div class="skill-name">Blockchain</div>
           <div class="skill-details">Ethereum, IPFS</div>
           <div class="skill-level"></div>
         </div>
         <div class="skill-item intermediate">
-          <img src="/images/ml.png" alt="MachineLearning" class="skill-icon">
+          <img src="images/ml.png" alt="MachineLearning" class="skill-icon">
           <div class="skill-name">Machine Learning</div>
           <div class="skill-details">Deep Learning</div>
           <div class="skill-level"></div>
         </div>
         <div class="skill-item advanced">
-          <img src="/images/webb.jpg" alt="WebDevelopment" class="skill-icon">
+          <img src="images/webb.jpg" alt="WebDevelopment" class="skill-icon">
           <div class="skill-name">Web Development</div>
           <div class="skill-details">Full Stack: Java + Angular</div>
           <div class="skill-level"></div>
