--- a/project2/day2proj2/src/app/pages/about/about.html
+++ b/project2/day2proj2/src/app/pages/about/about.html
@@ -20,7 +20,7 @@
       <div class="inner-cards">
         <p-card header="Education & Projects" class="education-card">
           <ng-template pTemplate="header">
-            <img src="/images/srec.jpg" alt="SREC" class="college-image">
+            <img src="images/srec.jpg" alt="SREC" class="college-image">
           </ng-template>
           <p>During my academic journey, I have worked on multiple projects such as a Cardiac Arrest Prediction Web App, a CO₂ Emission Reduction Platform using blockchain, and Deep Learning models for plant disease detection.</p>
           <p-divider></p-divider>
