--- a/project2/day2proj2/src/app/pages/certificates/certificates.html
+++ b/project2/day2proj2/src/app/pages/certificates/certificates.html
@@ -7,7 +7,7 @@
   <div class="certificates-grid">
     <p-card header="MongoDB Certification" class="certificate-card tech-cert">
       <ng-template pTemplate="header">
-        <p-image src="/images/mongo.png" alt="MongoDB Certification" width="100%" [preview]="true"></p-image>
+        <p-image src="images/mongo.png" alt="MongoDB Certification" width="100%" [preview]="true"></p-image>
         <p-badge value="Tech" severity="success" class="cert-badge"></p-badge>
       </ng-template>
       <div class="cert-issuer">MongoDB University</div>
@@ -23,7 +23,7 @@
 
     <p-card header="Cyber Security Certification" class="certificate-card security-cert">
       <ng-template pTemplate="header">
-        <p-image src="/images/cyber.jpg" alt="Cyber Security Certification" width="100%" [preview]="true"></p-image>
+        <p-image src="images/cyber.jpg" alt="Cyber Security Certification" width="100%" [preview]="true"></p-image>
         <p-badge value="Security" severity="danger" class="cert-badge"></p-badge>
       </ng-template>
       <div class="cert-issuer">SkillVertex • 2023</div>
@@ -38,7 +38,7 @@
 
     <p-card header="Bronze Medal" class="certificate-card sports-cert">
       <ng-template pTemplate="header">
-        <p-image src="/images/cm.avif" alt="Bronze Medal" width="100%" [preview]="true"></p-image>
+        <p-image src="images/cm.avif" alt="Bronze Medal" width="100%" [preview]="true"></p-image>
         <p-badge value="Sports" severity="warn" class="cert-badge"></p-badge>
       </ng-template>
       <div class="cert-issuer">District-level Football Competition</div>
@@ -53,7 +53,7 @@
 
     <p-card header="First Place" class="certificate-card sports-cert gold">
       <ng-template pTemplate="header">
-        <p-image src="/images/foot.png" alt="First Place Trophy" width="100%" [preview]="true"></p-image>
+        <p-image src="images/foot.png" alt="First Place Trophy" width="100%" [preview]="true"></p-image>
         <p-badge value="Champion" severity="success" class="cert-badge"></p-badge>
       </ng-template>
       <div class="cert-issuer">"Covai Ties" College Zone Level</div>
@@ -67,3 +67,4 @@
     </p-card>
   </div>
 </div>
+
