--- a/project2/day2proj2/src/app/pages/experience/experience.html
+++ b/project2/day2proj2/src/app/pages/experience/experience.html
@@ -8,7 +8,7 @@
     <p-card class="experience-card">
       <ng-template pTemplate="header">
         <div class="card-header">
-          <img src="/images/eps.jpeg" alt="ePS India" class="company-logo">
+          <img src="images/eps.jpeg" alt="ePS India" class="company-logo">
           <p-tag value="Current" severity="success" class="experience-badge"></p-tag>
         </div>
       </ng-template>
@@ -31,7 +31,7 @@
     <p-card class="experience-card">
       <ng-template pTemplate="header">
         <div class="card-header">
-          <img src="/images/as.png" alt="AS Global Soft Tech" class="company-logo">
+          <img src="images/as.png" alt="AS Global Soft Tech" class="company-logo">
           <p-tag value="ML Internship" severity="warning" class="experience-badge"></p-tag>
         </div>
       </ng-template>
@@ -52,7 +52,7 @@
     <p-card class="experience-card">
       <ng-template pTemplate="header">
         <div class="card-header">
-          <img src="/images/skill.png" alt="SkillVertex" class="company-logo">
+          <img src="images/skill.png" alt="SkillVertex" class="company-logo">
           <p-tag value="Security Training" severity="danger" class="experience-badge"></p-tag>
         </div>
       </ng-template>
