--- a/project2/day2proj2/src/app/pages/home/home.html
+++ b/project2/day2proj2/src/app/pages/home/home.html
@@ -44,7 +44,7 @@
     <div class="profile-section">
       <div class="profile-image-container">
         <div class="image-glow"></div>
-        <img src="/images/profile.jpg" alt="Lokeshwaran M" class="profile-image">
+        <img src="images/profile.jpg" alt="Lokeshwaran M" class="profile-image">
         <div class="status-indicator"></div>
       </div>
       
