--- a/project2/day2proj2/src/app/pages/project/project.html
+++ b/project2/day2proj2/src/app/pages/project/project.html
@@ -26,7 +26,7 @@
   <div class="projects-grid">
     <p-card header="Brinjal Disease Detection" class="project-card">
       <ng-template pTemplate="header">
-        <p-image src="/images/brinjal.jpg" alt="Plant disease detection" width="100%" [preview]="true"></p-image>
+        <p-image src="images/brinjal.jpg" alt="Plant disease detection" width="100%" [preview]="true"></p-image>
       </ng-template>
       <div class="project-meta">
         <p-tag value="3 months" severity="info"></p-tag>
@@ -45,7 +45,7 @@
 
     <p-card header="Face Mask Detection" class="project-card">
       <ng-template pTemplate="header">
-        <p-image src="/images/mask.png" alt="Face mask detection" width="100%" [preview]="true"></p-image>
+        <p-image src="images/mask.png" alt="Face mask detection" width="100%" [preview]="true"></p-image>
       </ng-template>
       <div class="project-meta">
         <p-tag value="2 months" severity="info"></p-tag>
@@ -65,7 +65,7 @@
 
     <p-card header="MoveSmart: Automated Bus Station" class="project-card">
       <ng-template pTemplate="header">
-        <p-image src="/images/bus.png" alt="Smart bus station" width="100%" [preview]="true"></p-image>
+        <p-image src="images/bus.png" alt="Smart bus station" width="100%" [preview]="true"></p-image>
       </ng-template>
       <div class="project-meta">
         <p-tag value="4 months" severity="info"></p-tag>
@@ -84,7 +84,7 @@
 
     <p-card header="CO₂ Emission Reduction Platform" class="project-card">
       <ng-template pTemplate="header">
-        <p-image src="/images/co.jpg" alt="Carbon emission reduction" width="100%" [preview]="true"></p-image>
+        <p-image src="images/co.jpg" alt="Carbon emission reduction" width="100%" [preview]="true"></p-image>
       </ng-template>
       <div class="project-meta">
         <p-tag value="6 months" severity="info"></p-tag>
@@ -104,7 +104,7 @@
 
     <p-card header="Cardiac Arrest Prediction Web App" class="project-card">
       <ng-template pTemplate="header">
-        <p-image src="/images/cardiac.jpg" alt="Healthcare application" width="100%" [preview]="true"></p-image>
+        <p-image src="images/cardiac.jpg" alt="Healthcare application" width="100%" [preview]="true"></p-image>
       </ng-template>
       <div class="project-meta">
         <p-tag value="3 months" severity="info"></p-tag>
@@ -123,7 +123,7 @@
 
     <p-card header="Support Ticket System" class="project-card">
       <ng-template pTemplate="header">
-        <p-image src="/images/ticket.avif" alt="Support ticket system" width="100%" [preview]="true"></p-image>
+        <p-image src="images/ticket.avif" alt="Support ticket system" width="100%" [preview]="true"></p-image>
       </ng-template>
       <div class="project-meta">
         <p-tag value="2 months" severity="info"></p-tag>
