--- a/phase1/day4p1/frontend/src/app/app.html
+++ b/phase1/day4p1/frontend/src/app/app.html
@@ -2,7 +2,10 @@
 <div class="custom-header">
   <h2 style="margin: 0; color: white; font-weight: bold; font-size: 1.5rem;">{{appName}}</h2>
   <nav class="header-nav">
-    <a *ngFor="let item of menuItems" [routerLink]="item.routerLink" class="nav-link">
+    <a *ngFor="let item of menuItems" 
+       [routerLink]="item.routerLink" 
+       (click)="item.action ? onMenuClick(item) : null"
+       class="nav-link">
       <i [class]="item.icon"></i> {{item.label}}
     </a>
   </nav>
@@ -22,7 +25,8 @@
   </div>
   <ul class="sidebar-menu">
     <li *ngFor="let item of menuItems">
-      <a [routerLink]="item.routerLink" (click)="closeSidebar()">
+      <a [routerLink]="item.routerLink" 
+         (click)="item.action ? onMenuClick(item) : closeSidebar()">
         <i [class]="item.icon"></i> {{item.label}}
       </a>
     </li>
