--- a/project2/day2proj2/src/app/pages/skills/skills.html
+++ b/project2/day2proj2/src/app/pages/skills/skills.html
@@ -41,7 +41,7 @@
           <p-progressBar [value]="90" [showValue]="false"></p-progressBar>
         </p-card>
         <p-card class="skill-item">
-          <img src="/images/sql.webp" alt="SQL" class="skill-icon">
+          <img src="images/sql.webp" alt="SQL" class="skill-icon">
           <div class="skill-name">SQL</div>
           <div class="skill-details">
             <p-chip label="PostgreSQL" severity="success"></p-chip>
@@ -76,7 +76,7 @@
           <p-progressBar [value]="75" [showValue]="false"></p-progressBar>
         </p-card>
         <p-card class="skill-item">
-          <img src="/images/opencv.png" alt="OpenCV" class="skill-icon">
+          <img src="images/opencv.png" alt="OpenCV" class="skill-icon">
           <div class="skill-name">OpenCV</div>
           <div class="skill-details">
             <p-chip label="Computer Vision" severity="success"></p-chip>
@@ -84,7 +84,7 @@
           <p-progressBar [value]="70" [showValue]="false"></p-progressBar>
         </p-card>
         <p-card class="skill-item">
-          <img src="/images/jiratool.png" alt="JIRA" class="skill-icon">
+          <img src="images/jiratool.png" alt="JIRA" class="skill-icon">
           <div class="skill-name">JIRA</div>
           <div class="skill-details">
             <p-chip label="Scrum" severity="info"></p-chip>
@@ -102,7 +102,7 @@
       </div>
       <div class="skills-grid">
         <p-card class="skill-item">
-          <img src="/images/block.png" alt="Blockchain" class="skill-icon">
+          <img src="images/block.png" alt="Blockchain" class="skill-icon">
           <div class="skill-name">Blockchain</div>
           <div class="skill-details">
             <p-chip label="Ethereum" severity="warning"></p-chip>
@@ -111,7 +111,7 @@
           <p-progressBar [value]="50" [showValue]="false"></p-progressBar>
         </p-card>
         <p-card class="skill-item">
-          <img src="/images/ml.png" alt="MachineLearning" class="skill-icon">
+          <img src="images/ml.png" alt="MachineLearning" class="skill-icon">
           <div class="skill-name">Machine Learning</div>
           <div class="skill-details">
             <p-chip label="Deep Learning" severity="success"></p-chip>
@@ -119,7 +119,7 @@
           <p-progressBar [value]="75" [showValue]="false"></p-progressBar>
         </p-card>
         <p-card class="skill-item">
-          <img src="/images/webb.jpg" alt="WebDevelopment" class="skill-icon">
+          <img src="images/webb.jpg" alt="WebDevelopment" class="skill-icon">
           <div class="skill-name">Web Development</div>
           <div class="skill-details">
             <p-chip label="Full Stack" severity="success"></p-chip>
